﻿drkns 28.03.2015 16:51:12 +0200 - build 4327

1. Рефакторинг.

w17 26.03.2015 13:57:16 +0300 - build 4326

1. Уточнение 4324

w17 26.03.2015 13:51:15 +0300 - build 4325

1. Уточнение 4324

w17 25.03.2015 13:23:12 +0300 - build 4324

1. Experimental: Продолжение 3717 (M#2208: Запоминать, в какой папке была запущена команда).
   Новый параметр конфигурации System.PerFolderCmdHistory.
   Умолчание = false, если true - в историю записываюся одинаковые команды
   если каталоги запуска отличаются. В стандартной истории фар дубли команд не показываются.

drkns 21.03.2015 16:50:29 +0200 - build 4323

1. Копирование текста из полей ввода могло вызывать ассерты.

zg 21.03.2015 16:47:45 +0200 - build 4322

1. удалена пасхалка от валентина. если, например, в командной строке ввести магический набор букв:
   lua:far.InputRecordToName ({EventType=far.Flags.KEY_EVENT,KeyDown=true,RepeatCount=1,VirtualKeyCode=45,VirtualScanCode=82,UnicodeChar=0,ControlKeyState=258})
   вызывался граббер.

zg 21.03.2015 00:32:43 +0200 - build 4321

1. событие FARMACRO_KEY_EVENT удалено.

2. временное уточнение 4318 для нажатий shift/alt/ctrl.

drkns 20.03.2015 09:36:40 +0200 - build 4320

1. Продолжение 4309.

drkns 19.03.2015 22:55:49 +0200 - build 4319

1. Уточнение 4280.

zg 19.03.2015 19:12:19 +0200 - build 4318

1. рефакторинг: обработка нажатий клавиш.

w17 19.03.2015 13:08:26 +0300 - build 4317

1. M#2971: Падение при использовании регулярного выражения с большим количеством групп

zg 19.03.2015 00:34:46 +0200 - build 4316

1. рефакторинг: обработка нажатий клавиш.

drkns 18.03.2015 22:06:40 +0200 - build 4315

1. Продолжение 4309.

zg 18.03.2015 16:13:08 +0200 - build 4314

1. уточнение 4309: по ctrla в редакторе выделялся блок неопределённого типа.

zg 18.03.2015 15:36:39 +0200 - build 4313

1. уточнение 4305: в ProcessEditorInputW перестали приходить сообщения об отпускании клавиш.

drkns 18.03.2015 08:59:33 +0200 - build 4312
