@@ -1,4 +1,8 @@
-﻿drkns 28.03.2015 16:51:12 +0200 - build 4327
+﻿shmuel 29.03.2015 20:49:04 +0200 - build 4328
+
+1. Уточнение 4261.
+
+drkns 28.03.2015 16:51:12 +0200 - build 4327
 
 1. Рефакторинг.
 
